k8s/worker-spot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-worker-spot
  namespace: llm
spec:
  replicas: 0
  selector:
    matchLabels:
      app: llm-worker-spot
  template:
    metadata:
      labels:
        app: llm-worker-spot
    spec:
      nodeSelector:
        pool: spot
      containers:
        - name: worker
          image: kartikeya532001/llm-chat:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "2000m"
              memory: "4Gi"
            limits:
              cpu: "4000m"
              memory: "8Gi"
