k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      nodeSelector:
        pool: warm
      tolerations:
        - key: "warm-pool"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: api
          image: kartikeya532001/llm-api:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
      imagePullSecrets:
       - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: app
spec:
  selector:
    app: api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
