k8s/api_deploy.yaml
# -----------------------------
# Namespace
# -----------------------------
apiVersion: v1
kind: Namespace
metadata:
  name: llm

---

# -----------------------------
# Redis Deployment
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
  namespace: llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      # Run on warm On-Demand node
      nodeSelector:
        pool: warm
      tolerations:
        - key: "warm-pool"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379

---

# -----------------------------
# Redis Service
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: llm
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  type: ClusterIP

---

# -----------------------------
# API Deployment
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-api
  namespace: llm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: llm-api
  template:
    metadata:
      labels:
        app: llm-api
    spec:
      # Force API to run on warm On-Demand node
      nodeSelector:
        pool: warm
      tolerations:
        - key: "warm-pool"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: mt-api
          image: kartikeya532001/llm-chat:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

# -----------------------------
# API Service
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: llm-api
  namespace: llm
spec:
  selector:
    app: llm-api
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
