k8s/aws-load-balancer-controller.yml
# -----------------------------
# Deployment
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      containers:
        - name: controller
          image: public.ecr.aws/eks/aws-load-balancer-controller:v2.17.0
          args:
            - --cluster-name=llm-cluster
            - --aws-region=ap-south-1
            - --aws-vpc-id=vpc-061740b4683e62b59
            - --enable-leader-election
            - --ingress-class=alb
            - --webhook-cert-dir=/tmp/k8s-webhook-server/serving-certs
          volumeMounts:
            - name: webhook-certs
              mountPath: /tmp/k8s-webhook-server/serving-certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: aws-load-balancer-webhook-tls
---
# -----------------------------
# IngressClass
# -----------------------------
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: ingress.k8s.aws/alb
---
# -----------------------------
# Webhook Service
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: aws-load-balancer-webhook-service
  namespace: kube-system
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    app.kubernetes.io/name: aws-load-balancer-controller
---
# -----------------------------
# Mutating Webhook
# -----------------------------
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: aws-load-balancer-webhook
webhooks:
  - name: webhook.elbv2.k8s.aws
    clientConfig:
      service:
        name: aws-load-balancer-webhook-service
        namespace: kube-system
        path: /mutate-v1-service
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["services"]
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1"]
---
# -----------------------------
# Validating Webhook
# -----------------------------
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: aws-load-balancer-webhook
webhooks:
  - name: webhook.elbv2.k8s.aws
    clientConfig:
      service:
        name: aws-load-balancer-webhook-service
        namespace: kube-system
        path: /validate-v1-service
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["services"]
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1"]
